// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should handle escaped solidus 1`] = `
Array [
  Object {
    "loc": Object {
      "end": Object {
        "column": 1,
        "line": 1,
      },
      "start": Object {
        "column": 0,
        "line": 1,
      },
    },
    "raw": "a",
    "type": "Literal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 3,
        "line": 1,
      },
      "start": Object {
        "column": 2,
        "line": 1,
      },
    },
    "raw": "=",
    "type": "Equal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 8,
        "line": 1,
      },
      "start": Object {
        "column": 4,
        "line": 1,
      },
    },
    "raw": "\\"\\\\\\\\\\"",
    "type": "Literal",
  },
]
`;

exports[`should tokenize complex input 1`] = `
Array [
  Object {
    "loc": Object {
      "end": Object {
        "column": 32,
        "line": 1,
      },
      "start": Object {
        "column": 0,
        "line": 1,
      },
    },
    "raw": "# This is a TOML document. Boom.",
    "type": "Comment",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 5,
        "line": 3,
      },
      "start": Object {
        "column": 0,
        "line": 3,
      },
    },
    "raw": "title",
    "type": "Literal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 7,
        "line": 3,
      },
      "start": Object {
        "column": 6,
        "line": 3,
      },
    },
    "raw": "=",
    "type": "Equal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 22,
        "line": 3,
      },
      "start": Object {
        "column": 8,
        "line": 3,
      },
    },
    "raw": "\\"TOML Example\\"",
    "type": "Literal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 1,
        "line": 5,
      },
      "start": Object {
        "column": 0,
        "line": 5,
      },
    },
    "raw": "[",
    "type": "Bracket",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 6,
        "line": 5,
      },
      "start": Object {
        "column": 1,
        "line": 5,
      },
    },
    "raw": "owner",
    "type": "Literal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 7,
        "line": 5,
      },
      "start": Object {
        "column": 6,
        "line": 5,
      },
    },
    "raw": "]",
    "type": "Bracket",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 4,
        "line": 6,
      },
      "start": Object {
        "column": 0,
        "line": 6,
      },
    },
    "raw": "name",
    "type": "Literal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 6,
        "line": 6,
      },
      "start": Object {
        "column": 5,
        "line": 6,
      },
    },
    "raw": "=",
    "type": "Equal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 27,
        "line": 6,
      },
      "start": Object {
        "column": 7,
        "line": 6,
      },
    },
    "raw": "\\"Tom Preston-Werner\\"",
    "type": "Literal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 12,
        "line": 7,
      },
      "start": Object {
        "column": 0,
        "line": 7,
      },
    },
    "raw": "organization",
    "type": "Literal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 14,
        "line": 7,
      },
      "start": Object {
        "column": 13,
        "line": 7,
      },
    },
    "raw": "=",
    "type": "Equal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 23,
        "line": 7,
      },
      "start": Object {
        "column": 15,
        "line": 7,
      },
    },
    "raw": "\\"GitHub\\"",
    "type": "Literal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 3,
        "line": 8,
      },
      "start": Object {
        "column": 0,
        "line": 8,
      },
    },
    "raw": "bio",
    "type": "Literal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 5,
        "line": 8,
      },
      "start": Object {
        "column": 4,
        "line": 8,
      },
    },
    "raw": "=",
    "type": "Equal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 58,
        "line": 8,
      },
      "start": Object {
        "column": 6,
        "line": 8,
      },
    },
    "raw": "\\"GitHub Cofounder & CEO\\\\nLikes tater tots and beer.\\"",
    "type": "Literal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 3,
        "line": 9,
      },
      "start": Object {
        "column": 0,
        "line": 9,
      },
    },
    "raw": "dob",
    "type": "Literal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 5,
        "line": 9,
      },
      "start": Object {
        "column": 4,
        "line": 9,
      },
    },
    "raw": "=",
    "type": "Equal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 26,
        "line": 9,
      },
      "start": Object {
        "column": 6,
        "line": 9,
      },
    },
    "raw": "1979-05-27T07:32:00Z",
    "type": "Literal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 56,
        "line": 9,
      },
      "start": Object {
        "column": 27,
        "line": 9,
      },
    },
    "raw": "# First class dates? Why not?",
    "type": "Comment",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 1,
        "line": 11,
      },
      "start": Object {
        "column": 0,
        "line": 11,
      },
    },
    "raw": "[",
    "type": "Bracket",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 9,
        "line": 11,
      },
      "start": Object {
        "column": 1,
        "line": 11,
      },
    },
    "raw": "database",
    "type": "Literal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 10,
        "line": 11,
      },
      "start": Object {
        "column": 9,
        "line": 11,
      },
    },
    "raw": "]",
    "type": "Bracket",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 6,
        "line": 12,
      },
      "start": Object {
        "column": 0,
        "line": 12,
      },
    },
    "raw": "server",
    "type": "Literal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 8,
        "line": 12,
      },
      "start": Object {
        "column": 7,
        "line": 12,
      },
    },
    "raw": "=",
    "type": "Equal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 22,
        "line": 12,
      },
      "start": Object {
        "column": 9,
        "line": 12,
      },
    },
    "raw": "\\"192.168.1.1\\"",
    "type": "Literal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 5,
        "line": 13,
      },
      "start": Object {
        "column": 0,
        "line": 13,
      },
    },
    "raw": "ports",
    "type": "Literal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 7,
        "line": 13,
      },
      "start": Object {
        "column": 6,
        "line": 13,
      },
    },
    "raw": "=",
    "type": "Equal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 9,
        "line": 13,
      },
      "start": Object {
        "column": 8,
        "line": 13,
      },
    },
    "raw": "[",
    "type": "Bracket",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 14,
        "line": 13,
      },
      "start": Object {
        "column": 10,
        "line": 13,
      },
    },
    "raw": "8001",
    "type": "Literal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 15,
        "line": 13,
      },
      "start": Object {
        "column": 14,
        "line": 13,
      },
    },
    "raw": ",",
    "type": "Comma",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 20,
        "line": 13,
      },
      "start": Object {
        "column": 16,
        "line": 13,
      },
    },
    "raw": "8001",
    "type": "Literal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 21,
        "line": 13,
      },
      "start": Object {
        "column": 20,
        "line": 13,
      },
    },
    "raw": ",",
    "type": "Comma",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 26,
        "line": 13,
      },
      "start": Object {
        "column": 22,
        "line": 13,
      },
    },
    "raw": "8002",
    "type": "Literal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 28,
        "line": 13,
      },
      "start": Object {
        "column": 27,
        "line": 13,
      },
    },
    "raw": "]",
    "type": "Bracket",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 14,
        "line": 14,
      },
      "start": Object {
        "column": 0,
        "line": 14,
      },
    },
    "raw": "connection_max",
    "type": "Literal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 16,
        "line": 14,
      },
      "start": Object {
        "column": 15,
        "line": 14,
      },
    },
    "raw": "=",
    "type": "Equal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 21,
        "line": 14,
      },
      "start": Object {
        "column": 17,
        "line": 14,
      },
    },
    "raw": "5000",
    "type": "Literal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 7,
        "line": 15,
      },
      "start": Object {
        "column": 0,
        "line": 15,
      },
    },
    "raw": "enabled",
    "type": "Literal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 9,
        "line": 15,
      },
      "start": Object {
        "column": 8,
        "line": 15,
      },
    },
    "raw": "=",
    "type": "Equal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 14,
        "line": 15,
      },
      "start": Object {
        "column": 10,
        "line": 15,
      },
    },
    "raw": "true",
    "type": "Literal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 1,
        "line": 17,
      },
      "start": Object {
        "column": 0,
        "line": 17,
      },
    },
    "raw": "[",
    "type": "Bracket",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 8,
        "line": 17,
      },
      "start": Object {
        "column": 1,
        "line": 17,
      },
    },
    "raw": "servers",
    "type": "Literal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 9,
        "line": 17,
      },
      "start": Object {
        "column": 8,
        "line": 17,
      },
    },
    "raw": "]",
    "type": "Bracket",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 66,
        "line": 19,
      },
      "start": Object {
        "column": 2,
        "line": 19,
      },
    },
    "raw": "# You can indent as you please. Tabs or spaces. TOML don't care.",
    "type": "Comment",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 3,
        "line": 20,
      },
      "start": Object {
        "column": 2,
        "line": 20,
      },
    },
    "raw": "[",
    "type": "Bracket",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 10,
        "line": 20,
      },
      "start": Object {
        "column": 3,
        "line": 20,
      },
    },
    "raw": "servers",
    "type": "Literal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 11,
        "line": 20,
      },
      "start": Object {
        "column": 10,
        "line": 20,
      },
    },
    "raw": ".",
    "type": "Dot",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 16,
        "line": 20,
      },
      "start": Object {
        "column": 11,
        "line": 20,
      },
    },
    "raw": "alpha",
    "type": "Literal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 17,
        "line": 20,
      },
      "start": Object {
        "column": 16,
        "line": 20,
      },
    },
    "raw": "]",
    "type": "Bracket",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 4,
        "line": 21,
      },
      "start": Object {
        "column": 2,
        "line": 21,
      },
    },
    "raw": "ip",
    "type": "Literal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 6,
        "line": 21,
      },
      "start": Object {
        "column": 5,
        "line": 21,
      },
    },
    "raw": "=",
    "type": "Equal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 17,
        "line": 21,
      },
      "start": Object {
        "column": 7,
        "line": 21,
      },
    },
    "raw": "\\"10.0.0.1\\"",
    "type": "Literal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 4,
        "line": 22,
      },
      "start": Object {
        "column": 2,
        "line": 22,
      },
    },
    "raw": "dc",
    "type": "Literal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 6,
        "line": 22,
      },
      "start": Object {
        "column": 5,
        "line": 22,
      },
    },
    "raw": "=",
    "type": "Equal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 15,
        "line": 22,
      },
      "start": Object {
        "column": 7,
        "line": 22,
      },
    },
    "raw": "\\"eqdc10\\"",
    "type": "Literal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 3,
        "line": 24,
      },
      "start": Object {
        "column": 2,
        "line": 24,
      },
    },
    "raw": "[",
    "type": "Bracket",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 10,
        "line": 24,
      },
      "start": Object {
        "column": 3,
        "line": 24,
      },
    },
    "raw": "servers",
    "type": "Literal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 11,
        "line": 24,
      },
      "start": Object {
        "column": 10,
        "line": 24,
      },
    },
    "raw": ".",
    "type": "Dot",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 15,
        "line": 24,
      },
      "start": Object {
        "column": 11,
        "line": 24,
      },
    },
    "raw": "beta",
    "type": "Literal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 16,
        "line": 24,
      },
      "start": Object {
        "column": 15,
        "line": 24,
      },
    },
    "raw": "]",
    "type": "Bracket",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 4,
        "line": 25,
      },
      "start": Object {
        "column": 2,
        "line": 25,
      },
    },
    "raw": "ip",
    "type": "Literal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 6,
        "line": 25,
      },
      "start": Object {
        "column": 5,
        "line": 25,
      },
    },
    "raw": "=",
    "type": "Equal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 17,
        "line": 25,
      },
      "start": Object {
        "column": 7,
        "line": 25,
      },
    },
    "raw": "\\"10.0.0.2\\"",
    "type": "Literal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 4,
        "line": 26,
      },
      "start": Object {
        "column": 2,
        "line": 26,
      },
    },
    "raw": "dc",
    "type": "Literal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 6,
        "line": 26,
      },
      "start": Object {
        "column": 5,
        "line": 26,
      },
    },
    "raw": "=",
    "type": "Equal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 15,
        "line": 26,
      },
      "start": Object {
        "column": 7,
        "line": 26,
      },
    },
    "raw": "\\"eqdc10\\"",
    "type": "Literal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 9,
        "line": 27,
      },
      "start": Object {
        "column": 2,
        "line": 27,
      },
    },
    "raw": "country",
    "type": "Literal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 11,
        "line": 27,
      },
      "start": Object {
        "column": 10,
        "line": 27,
      },
    },
    "raw": "=",
    "type": "Equal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 16,
        "line": 27,
      },
      "start": Object {
        "column": 12,
        "line": 27,
      },
    },
    "raw": "\\"中国\\"",
    "type": "Literal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 49,
        "line": 27,
      },
      "start": Object {
        "column": 17,
        "line": 27,
      },
    },
    "raw": "# This should be parsed as UTF-8",
    "type": "Comment",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 1,
        "line": 29,
      },
      "start": Object {
        "column": 0,
        "line": 29,
      },
    },
    "raw": "[",
    "type": "Bracket",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 8,
        "line": 29,
      },
      "start": Object {
        "column": 1,
        "line": 29,
      },
    },
    "raw": "clients",
    "type": "Literal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 9,
        "line": 29,
      },
      "start": Object {
        "column": 8,
        "line": 29,
      },
    },
    "raw": "]",
    "type": "Bracket",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 4,
        "line": 30,
      },
      "start": Object {
        "column": 0,
        "line": 30,
      },
    },
    "raw": "data",
    "type": "Literal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 6,
        "line": 30,
      },
      "start": Object {
        "column": 5,
        "line": 30,
      },
    },
    "raw": "=",
    "type": "Equal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 8,
        "line": 30,
      },
      "start": Object {
        "column": 7,
        "line": 30,
      },
    },
    "raw": "[",
    "type": "Bracket",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 10,
        "line": 30,
      },
      "start": Object {
        "column": 9,
        "line": 30,
      },
    },
    "raw": "[",
    "type": "Bracket",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 17,
        "line": 30,
      },
      "start": Object {
        "column": 10,
        "line": 30,
      },
    },
    "raw": "\\"gamma\\"",
    "type": "Literal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 18,
        "line": 30,
      },
      "start": Object {
        "column": 17,
        "line": 30,
      },
    },
    "raw": ",",
    "type": "Comma",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 26,
        "line": 30,
      },
      "start": Object {
        "column": 19,
        "line": 30,
      },
    },
    "raw": "\\"delta\\"",
    "type": "Literal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 27,
        "line": 30,
      },
      "start": Object {
        "column": 26,
        "line": 30,
      },
    },
    "raw": "]",
    "type": "Bracket",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 28,
        "line": 30,
      },
      "start": Object {
        "column": 27,
        "line": 30,
      },
    },
    "raw": ",",
    "type": "Comma",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 30,
        "line": 30,
      },
      "start": Object {
        "column": 29,
        "line": 30,
      },
    },
    "raw": "[",
    "type": "Bracket",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 31,
        "line": 30,
      },
      "start": Object {
        "column": 30,
        "line": 30,
      },
    },
    "raw": "1",
    "type": "Literal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 32,
        "line": 30,
      },
      "start": Object {
        "column": 31,
        "line": 30,
      },
    },
    "raw": ",",
    "type": "Comma",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 34,
        "line": 30,
      },
      "start": Object {
        "column": 33,
        "line": 30,
      },
    },
    "raw": "2",
    "type": "Literal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 35,
        "line": 30,
      },
      "start": Object {
        "column": 34,
        "line": 30,
      },
    },
    "raw": "]",
    "type": "Bracket",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 37,
        "line": 30,
      },
      "start": Object {
        "column": 36,
        "line": 30,
      },
    },
    "raw": "]",
    "type": "Bracket",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 86,
        "line": 30,
      },
      "start": Object {
        "column": 38,
        "line": 30,
      },
    },
    "raw": "# just an update to make sure parsers support it",
    "type": "Comment",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 39,
        "line": 32,
      },
      "start": Object {
        "column": 0,
        "line": 32,
      },
    },
    "raw": "# Line breaks are OK when inside arrays",
    "type": "Comment",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 5,
        "line": 33,
      },
      "start": Object {
        "column": 0,
        "line": 33,
      },
    },
    "raw": "hosts",
    "type": "Literal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 7,
        "line": 33,
      },
      "start": Object {
        "column": 6,
        "line": 33,
      },
    },
    "raw": "=",
    "type": "Equal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 9,
        "line": 33,
      },
      "start": Object {
        "column": 8,
        "line": 33,
      },
    },
    "raw": "[",
    "type": "Bracket",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 9,
        "line": 34,
      },
      "start": Object {
        "column": 2,
        "line": 34,
      },
    },
    "raw": "\\"alpha\\"",
    "type": "Literal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 10,
        "line": 34,
      },
      "start": Object {
        "column": 9,
        "line": 34,
      },
    },
    "raw": ",",
    "type": "Comma",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 9,
        "line": 35,
      },
      "start": Object {
        "column": 2,
        "line": 35,
      },
    },
    "raw": "\\"omega\\"",
    "type": "Literal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 1,
        "line": 36,
      },
      "start": Object {
        "column": 0,
        "line": 36,
      },
    },
    "raw": "]",
    "type": "Bracket",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 5,
        "line": 38,
      },
      "start": Object {
        "column": 0,
        "line": 38,
      },
    },
    "raw": "count",
    "type": "Literal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 7,
        "line": 38,
      },
      "start": Object {
        "column": 6,
        "line": 38,
      },
    },
    "raw": "=",
    "type": "Equal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 9,
        "line": 38,
      },
      "start": Object {
        "column": 8,
        "line": 38,
      },
    },
    "raw": "{",
    "type": "Curly",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 11,
        "line": 38,
      },
      "start": Object {
        "column": 10,
        "line": 38,
      },
    },
    "raw": "a",
    "type": "Literal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 13,
        "line": 38,
      },
      "start": Object {
        "column": 12,
        "line": 38,
      },
    },
    "raw": "=",
    "type": "Equal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 15,
        "line": 38,
      },
      "start": Object {
        "column": 14,
        "line": 38,
      },
    },
    "raw": "1",
    "type": "Literal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 16,
        "line": 38,
      },
      "start": Object {
        "column": 15,
        "line": 38,
      },
    },
    "raw": ",",
    "type": "Comma",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 18,
        "line": 38,
      },
      "start": Object {
        "column": 17,
        "line": 38,
      },
    },
    "raw": "b",
    "type": "Literal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 19,
        "line": 38,
      },
      "start": Object {
        "column": 18,
        "line": 38,
      },
    },
    "raw": "=",
    "type": "Equal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 20,
        "line": 38,
      },
      "start": Object {
        "column": 19,
        "line": 38,
      },
    },
    "raw": "2",
    "type": "Literal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 24,
        "line": 38,
      },
      "start": Object {
        "column": 23,
        "line": 38,
      },
    },
    "raw": ",",
    "type": "Comma",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 26,
        "line": 38,
      },
      "start": Object {
        "column": 25,
        "line": 38,
      },
    },
    "raw": "c",
    "type": "Literal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 28,
        "line": 38,
      },
      "start": Object {
        "column": 27,
        "line": 38,
      },
    },
    "raw": "=",
    "type": "Equal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 30,
        "line": 38,
      },
      "start": Object {
        "column": 29,
        "line": 38,
      },
    },
    "raw": "3",
    "type": "Literal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 32,
        "line": 38,
      },
      "start": Object {
        "column": 31,
        "line": 38,
      },
    },
    "raw": "}",
    "type": "Curly",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 10,
        "line": 40,
      },
      "start": Object {
        "column": 0,
        "line": 40,
      },
    },
    "raw": "# Products",
    "type": "Comment",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 3,
        "line": 42,
      },
      "start": Object {
        "column": 2,
        "line": 42,
      },
    },
    "raw": "[",
    "type": "Bracket",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 4,
        "line": 42,
      },
      "start": Object {
        "column": 3,
        "line": 42,
      },
    },
    "raw": "[",
    "type": "Bracket",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 12,
        "line": 42,
      },
      "start": Object {
        "column": 4,
        "line": 42,
      },
    },
    "raw": "products",
    "type": "Literal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 13,
        "line": 42,
      },
      "start": Object {
        "column": 12,
        "line": 42,
      },
    },
    "raw": "]",
    "type": "Bracket",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 14,
        "line": 42,
      },
      "start": Object {
        "column": 13,
        "line": 42,
      },
    },
    "raw": "]",
    "type": "Bracket",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 6,
        "line": 43,
      },
      "start": Object {
        "column": 2,
        "line": 43,
      },
    },
    "raw": "name",
    "type": "Literal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 8,
        "line": 43,
      },
      "start": Object {
        "column": 7,
        "line": 43,
      },
    },
    "raw": "=",
    "type": "Equal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 17,
        "line": 43,
      },
      "start": Object {
        "column": 9,
        "line": 43,
      },
    },
    "raw": "\\"Hammer\\"",
    "type": "Literal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 5,
        "line": 44,
      },
      "start": Object {
        "column": 2,
        "line": 44,
      },
    },
    "raw": "sku",
    "type": "Literal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 7,
        "line": 44,
      },
      "start": Object {
        "column": 6,
        "line": 44,
      },
    },
    "raw": "=",
    "type": "Equal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 17,
        "line": 44,
      },
      "start": Object {
        "column": 8,
        "line": 44,
      },
    },
    "raw": "738594937",
    "type": "Literal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 3,
        "line": 46,
      },
      "start": Object {
        "column": 2,
        "line": 46,
      },
    },
    "raw": "[",
    "type": "Bracket",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 4,
        "line": 46,
      },
      "start": Object {
        "column": 3,
        "line": 46,
      },
    },
    "raw": "[",
    "type": "Bracket",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 12,
        "line": 46,
      },
      "start": Object {
        "column": 4,
        "line": 46,
      },
    },
    "raw": "products",
    "type": "Literal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 13,
        "line": 46,
      },
      "start": Object {
        "column": 12,
        "line": 46,
      },
    },
    "raw": "]",
    "type": "Bracket",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 14,
        "line": 46,
      },
      "start": Object {
        "column": 13,
        "line": 46,
      },
    },
    "raw": "]",
    "type": "Bracket",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 6,
        "line": 47,
      },
      "start": Object {
        "column": 2,
        "line": 47,
      },
    },
    "raw": "name",
    "type": "Literal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 8,
        "line": 47,
      },
      "start": Object {
        "column": 7,
        "line": 47,
      },
    },
    "raw": "=",
    "type": "Equal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 15,
        "line": 47,
      },
      "start": Object {
        "column": 9,
        "line": 47,
      },
    },
    "raw": "\\"Nail\\"",
    "type": "Literal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 5,
        "line": 48,
      },
      "start": Object {
        "column": 2,
        "line": 48,
      },
    },
    "raw": "sku",
    "type": "Literal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 7,
        "line": 48,
      },
      "start": Object {
        "column": 6,
        "line": 48,
      },
    },
    "raw": "=",
    "type": "Equal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 17,
        "line": 48,
      },
      "start": Object {
        "column": 8,
        "line": 48,
      },
    },
    "raw": "284758393",
    "type": "Literal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 7,
        "line": 49,
      },
      "start": Object {
        "column": 2,
        "line": 49,
      },
    },
    "raw": "color",
    "type": "Literal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 9,
        "line": 49,
      },
      "start": Object {
        "column": 8,
        "line": 49,
      },
    },
    "raw": "=",
    "type": "Equal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 16,
        "line": 49,
      },
      "start": Object {
        "column": 10,
        "line": 49,
      },
    },
    "raw": "\\"gray\\"",
    "type": "Literal",
  },
]
`;

exports[`should tokenize dotted key with spaces 1`] = `
Array [
  Object {
    "loc": Object {
      "end": Object {
        "column": 1,
        "line": 1,
      },
      "start": Object {
        "column": 0,
        "line": 1,
      },
    },
    "raw": "[",
    "type": "Bracket",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 2,
        "line": 1,
      },
      "start": Object {
        "column": 1,
        "line": 1,
      },
    },
    "raw": "[",
    "type": "Bracket",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 4,
        "line": 1,
      },
      "start": Object {
        "column": 3,
        "line": 1,
      },
    },
    "raw": "a",
    "type": "Literal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 6,
        "line": 1,
      },
      "start": Object {
        "column": 5,
        "line": 1,
      },
    },
    "raw": ".",
    "type": "Dot",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 10,
        "line": 1,
      },
      "start": Object {
        "column": 7,
        "line": 1,
      },
    },
    "raw": "\\"b\\"",
    "type": "Literal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 12,
        "line": 1,
      },
      "start": Object {
        "column": 11,
        "line": 1,
      },
    },
    "raw": ".",
    "type": "Dot",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 16,
        "line": 1,
      },
      "start": Object {
        "column": 13,
        "line": 1,
      },
    },
    "raw": "'c'",
    "type": "Literal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 18,
        "line": 1,
      },
      "start": Object {
        "column": 17,
        "line": 1,
      },
    },
    "raw": "]",
    "type": "Bracket",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 19,
        "line": 1,
      },
      "start": Object {
        "column": 18,
        "line": 1,
      },
    },
    "raw": "]",
    "type": "Bracket",
  },
]
`;

exports[`should tokenize multiline strings 1`] = `
Array [
  Object {
    "loc": Object {
      "end": Object {
        "column": 5,
        "line": 2,
      },
      "start": Object {
        "column": 4,
        "line": 2,
      },
    },
    "raw": "a",
    "type": "Literal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 7,
        "line": 2,
      },
      "start": Object {
        "column": 6,
        "line": 2,
      },
    },
    "raw": "=",
    "type": "Equal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 11,
        "line": 2,
      },
      "start": Object {
        "column": 8,
        "line": 2,
      },
    },
    "raw": "\\"b\\"",
    "type": "Literal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 5,
        "line": 3,
      },
      "start": Object {
        "column": 4,
        "line": 3,
      },
    },
    "raw": "c",
    "type": "Literal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 7,
        "line": 3,
      },
      "start": Object {
        "column": 6,
        "line": 3,
      },
    },
    "raw": "=",
    "type": "Equal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 11,
        "line": 3,
      },
      "start": Object {
        "column": 8,
        "line": 3,
      },
    },
    "raw": "'d'",
    "type": "Literal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 5,
        "line": 4,
      },
      "start": Object {
        "column": 4,
        "line": 4,
      },
    },
    "raw": "e",
    "type": "Literal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 7,
        "line": 4,
      },
      "start": Object {
        "column": 6,
        "line": 4,
      },
    },
    "raw": "=",
    "type": "Equal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 7,
        "line": 6,
      },
      "start": Object {
        "column": 8,
        "line": 4,
      },
    },
    "raw": "\\"\\"\\"
      f
    \\"\\"\\"",
    "type": "Literal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 5,
        "line": 7,
      },
      "start": Object {
        "column": 4,
        "line": 7,
      },
    },
    "raw": "g",
    "type": "Literal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 7,
        "line": 7,
      },
      "start": Object {
        "column": 6,
        "line": 7,
      },
    },
    "raw": "=",
    "type": "Equal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 7,
        "line": 9,
      },
      "start": Object {
        "column": 8,
        "line": 7,
      },
    },
    "raw": "'''
      h
    '''",
    "type": "Literal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 7,
        "line": 10,
      },
      "start": Object {
        "column": 4,
        "line": 10,
      },
    },
    "raw": "\\"i\\"",
    "type": "Literal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 8,
        "line": 10,
      },
      "start": Object {
        "column": 7,
        "line": 10,
      },
    },
    "raw": ".",
    "type": "Dot",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 11,
        "line": 10,
      },
      "start": Object {
        "column": 8,
        "line": 10,
      },
    },
    "raw": "'j'",
    "type": "Literal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 12,
        "line": 10,
      },
      "start": Object {
        "column": 11,
        "line": 10,
      },
    },
    "raw": ".",
    "type": "Dot",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 13,
        "line": 10,
      },
      "start": Object {
        "column": 12,
        "line": 10,
      },
    },
    "raw": "k",
    "type": "Literal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 15,
        "line": 10,
      },
      "start": Object {
        "column": 14,
        "line": 10,
      },
    },
    "raw": "=",
    "type": "Equal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 19,
        "line": 10,
      },
      "start": Object {
        "column": 16,
        "line": 10,
      },
    },
    "raw": "\\"l\\"",
    "type": "Literal",
  },
]
`;

exports[`should tokenize simple input 1`] = `
Array [
  Object {
    "loc": Object {
      "end": Object {
        "column": 1,
        "line": 1,
      },
      "start": Object {
        "column": 0,
        "line": 1,
      },
    },
    "raw": "a",
    "type": "Literal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 3,
        "line": 1,
      },
      "start": Object {
        "column": 2,
        "line": 1,
      },
    },
    "raw": "=",
    "type": "Equal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 7,
        "line": 1,
      },
      "start": Object {
        "column": 4,
        "line": 1,
      },
    },
    "raw": "\\"b\\"",
    "type": "Literal",
  },
]
`;
